@startuml

title __LOGIN's Class Diagram__\n

  namespace com.example.myplanning {
    namespace activitats {
      namespace LogIn {
        class com.example.myplanning.activitats.LogIn.LogIn {
            - btnLogin : Button
            - btnRegistre : Button
            - txtPassword : EditText
            - txtUser : EditText
            + loginAccio()
            + registreAccio()
            # onCreate()
            # onResume()
            - initWidgets()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace LogIn {
        class com.example.myplanning.activitats.LogIn.LogInViewModel {
            - respuesta : MutableLiveData<String>
            + LogInViewModel()
            + campBuit()
            + contrasenyaDiferent()
            + getRespuesta()
            + logInCorrecte()
            + usuariInexistent()
        }
      }
    }
  }
  

  com.example.myplanning.activitats.LogIn.LogIn -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.LogIn.LogIn o-- com.example.myplanning.db.fireBaseController : db
  com.example.myplanning.activitats.LogIn.LogIn o-- com.example.myplanning.model.Llista.Usuario : usuario
  com.example.myplanning.activitats.LogIn.LogIn o-- com.example.myplanning.activitats.LogIn.LogInViewModel : viewModel
  com.example.myplanning.activitats.LogIn.LogInViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
